--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="row clearfix">
-                <img src="images/logo.png" alt="Cafe" class="logo">
+                <img src="logo.png" alt="Cafe" class="logo">
                 <ul class="main-nav"  id= "check-class" >
                     <li><a href="#">Cake Delivery</a></li>
                     <li><a href="#">How to order</a></li>
